--- a/admin/src/main/resources/k8s_templates/gogs.yaml
+++ b/admin/src/main/resources/k8s_templates/gogs.yaml
@@ -57,3 +57,39 @@ spec:
   selector:
     app: gogs
     component: gogs
+---
+apiVersion: extensions/v1beta1
+kind: Ingress
+metadata:
+  name: gogs
+  namespace: {{NAMESPACE}}
+  annotations:
+    ingress.kubernetes.io/rewrite-target: /
+    "ingress.kubernetes.io/auth-url": "http://auth.{{NAMESPACE}}.svc.cluster.local/"
+    "ingress.kubernetes.io/auth-signin": "http://gogs.{{NAMESPACE}}.kube.local/auth/signin.html?redirect=../"
+spec:
+  rules:
+  - host: gogs.{{NAMESPACE}}.kube.local
+    http:
+      paths:
+      - path: /
+        backend:
+          serviceName: gogs
+          servicePort: 80
+---
+apiVersion: extensions/v1beta1
+kind: Ingress
+metadata:
+  name: auth
+  namespace: {{NAMESPACE}}
+  annotations:
+    ingress.kubernetes.io/rewrite-target: /
+spec:
+  rules:
+  - host: gogs.{{NAMESPACE}}.kube.local
+    http:
+      paths:
+      - path: /auth/
+        backend:
+          serviceName: auth
+          servicePort: 80
