--- a/admin/src/main/resources/application.yaml
+++ b/admin/src/main/resources/application.yaml
@@ -13,17 +13,20 @@ server:
 
 app:
   env: dev
+  domain: ${DOMAIN:kube.local}
   kube:
     configType: kubeconf
-    agentImage: ${AGENT_IMAGE}
-    flowImage: ${FLOW_IMAGE}
+    agentImage: "nipun/klusterfuck-agent"
+    flowImage: "nipun/klusterfuck-flow"
+    authProxyImage: "nipun/klusterfuck-authproxy"
+    imageVersion: ${image.version}
   keycloak:
-    adminUser: ${KEYCLOAK_ADMIN_USER}
-    adminPassword: ${KEYCLOAK_ADMIN_PASSWORD}
+    adminUser: ${KEYCLOAK_ADMIN_USER:admin}
+    adminPassword: ${KEYCLOAK_ADMIN_PASSWORD:admin}
 
 keycloak:
-  auth-server-url: ${KEYCLOAK_URL}
-  realm: ${KEYCLOAK_REALM}
+  auth-server-url: ${KEYCLOAK_URL:http://keycloak.klusterfuck.svc.cluster.local/auth}
+  realm: ${KEYCLOAK_REALM:master}
   public-client: false
-  resource: ${KEYCLOAK_CLIENT_ID}
+  resource: ${KEYCLOAK_CLIENT_ID:klusterfuck}
   principal-attribute: "preferred_username"
