Move images to different docker hub account

--- a/admin/pom.xml
+++ b/admin/pom.xml
@@ -325,7 +325,7 @@
                 <configuration>
                     <images>
                         <image>
-                            <name>nipun/klusterfuck-admin:${image.version}</name>
+                            <name>klusterfuck/admin:${image.version}</name>
                             <build>
                                 <from>openjdk:8u131-jre-alpine</from>
                                 <cleanup>remove</cleanup>
