--- a/admin/src/main/resources/k8s_templates/function.yaml
+++ b/admin/src/main/resources/k8s_templates/function.yaml
@@ -57,7 +57,7 @@ metadata:
   namespace: {{NAMESPACE}}
   annotations:
     ingress.kubernetes.io/rewrite-target: /
-    "ingress.kubernetes.io/auth-url": "http://auth.{{NAMESPACE}}.svc.cluster.local/"
+    "ingress.kubernetes.io/auth-url": "http://{{AUTH_SERVER}}/"
     "ingress.kubernetes.io/auth-signin": "http://{{NAMESPACE}}.{{DOMAIN}}/auth/signin.html"
 spec:
   rules:
