--- a/flow/pom.xml
+++ b/flow/pom.xml
@@ -99,7 +99,7 @@
                 <configuration>
                     <images>
                         <image>
-                            <name>nipun/klusterfuck-flow:${image.version}</name>
+                            <name>klusterfuck/flow:${image.version}</name>
                             <build>
                                 <from>openjdk:8u131-jre-alpine</from>
                                 <cleanup>remove</cleanup>
