--- a/k8s/all.yaml
+++ b/k8s/all.yaml
@@ -27,7 +27,7 @@ spec:
       - name: klusterfuck
         securityContext:
           privileged: true
-        image: nipun/klusterfuck-admin:0.3.0
+        image: klusterfuck/admin:0.3.0
         imagePullPolicy: IfNotPresent
         readinessProbe:
           httpGet:
