Fix path for function ingress when creating first function

--- a/admin/src/main/resources/k8s_templates/gogs.yaml
+++ b/admin/src/main/resources/k8s_templates/gogs.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
       - name: gogs
-        image: fabric8/gogs
+        image: fabric8/gogs:2.2.335
         imagePullPolicy: IfNotPresent
         readinessProbe:
           httpGet:
